@@ -1,3 +1,6 @@
+2020-07-16:
+  - Implement reasonable 'predict' method for mmblogit objects.
+
 2020-07-15:
   - Bugfix: Make 'update' work with missing 'dispersion=' argument.
   - Bugfix: Make 'vcov' work for objects without 'phi' component.
